--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-open", "dialog-confirm", "clipboard-write-text", "fs-all", "path-all", "shell-open"] }
+tauri = { version = "1", features = [ "dialog-save", "window-minimize", "dialog-open", "dialog-confirm", "clipboard-write-text", "fs-all", "path-all", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rust-argon2 = "2.1.0"
